<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/edit_button_ll"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true"
    android:orientation="horizontal"
    android:paddingEnd="@dimen/right_margin"
    android:paddingStart="@dimen/left_margin"
    android:paddingTop="@dimen/top_margin"
    android:visibility="gone">

    <Button
        android:id="@+id/minus_large"
        style="@style/TimeGoalTheme.EditButton"
        android:contentDescription="@string/subtract_large_description"
        android:text="@string/minus_large_text" />

    <Button
        android:id="@+id/minus_medium"
        style="@style/TimeGoalTheme.EditButton"
        android:contentDescription="@string/subtract_medium_description"
        android:text="@string/minus_medium_text" />

    <Button
        android:id="@+id/minus_small"
        style="@style/TimeGoalTheme.EditButton"
        android:contentDescription="@string/subtract_small_description"
        android:text="@string/minus_small_text" />

    <Button
        android:id="@+id/plus_small"
        style="@style/TimeGoalTheme.EditButton"
        android:contentDescription="@string/plus_small_description"
        android:text="@string/plus_small_text" />

    <Button
        android:id="@+id/plus_medium"
        style="@style/TimeGoalTheme.EditButton"
        android:contentDescription="@string/plus_medium_description"
        android:text="@string/plus_medium_text" />

    <Button
        android:id="@+id/plus_large"
        style="@style/TimeGoalTheme.EditButton"
        android:contentDescription="@string/plus_large_description"
        android:text="@string/plus_large_text" />

</LinearLayout>