<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/select_scope_description"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/report_chart"
        android:id="@+id/month_week_radio_group">

        <RadioButton
            android:id="@+id/radio_button_months"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/months_description"
            android:text="@string/months"/>

        <RadioButton
            android:id="@+id/radio_button_weeks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/weeks_description"
            android:text="@string/weeks" />

    </RadioGroup>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/report_goal_spinner"
        android:contentDescription="@string/select_a_goal_or_all_goals_description"
        app:layout_constraintRight_toRightOf="@+id/report_chart"
        app:layout_constraintBottom_toTopOf="@+id/report_chart" />

    <com.github.mikephil.charting.charts.LineChart xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/report_chart"
        android:layout_width="match_parent"
        
        android:layout_height="400dp"
        android:layout_marginStart="@dimen/half_margin"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginEnd="@dimen/half_margin"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/month_week_radio_group" />

</android.support.constraint.ConstraintLayout>
