<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<TextView
    android:id="@+id/widget_goal_tv"
    android:layout_width="wrap_content"
    android:layout_gravity="left"
    android:layout_marginStart="@dimen/half_margin"
    android:layout_height="wrap_content"
    tools:text="@string/dummy_goal_title"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="@dimen/time_tv"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/half_margin"
            android:gravity="center_vertical"
            tools:text="00:00:00"
            android:visibility="visible"/>
        <TextView
            android:layout_width="0dp"
            tools:text=" / 00:00:00"
            android:gravity="center|left"
            android:layout_height="match_parent"
            android:layout_weight=".5"
            android:visibility="visible"/>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_weight="1">

          <ToggleButton
              android:id="@+id/start_stop"
              style="@style/TimeGoalTheme.ButtonStyle"
              android:layout_marginEnd="@dimen/right_margin"
              android:layout_width="wrap_content"
             android:layout_gravity="center"

              android:layout_height="@dimen/start_stop_button_height"
              android:textOff="@string/start"
              android:textOn="@string/stop" /> />
        </FrameLayout>


    </LinearLayout>

</android.support.v7.widget.LinearLayoutCompat>